--- a/scss/components/_ms-header.scss
+++ b/scss/components/_ms-header.scss
@@ -63,6 +63,7 @@ $header-style: 'default' !default;
         ink: $header-ink,
       ));
       backdrop-filter: blur(8px);
+      --ms-header-brand-visibility: block;
       // filter: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%);
     }
 
