--- a/scss/components/_ms-navbar.scss
+++ b/scss/components/_ms-navbar.scss
@@ -36,7 +36,46 @@
     z-index: 90;
 
     .ms-list__item {
+      display: flex;
+      justify-content: center;
+      padding: 0 !important;
       text-align: left;
+      user-select: none;
+
+      a {
+        width: 100%;
+        display: inline-block;
+        text-align: inherit;
+        padding: 0.5rem 0.7rem;
+      }
+
+      &.is-active {
+        @include himig.color-bind('list-item', (
+          fill: 'surface-200',
+          ink: 'surface-ink',
+          border: 'surface-200'
+        ));
+        @include himig.typography-bind('list-item', (
+          weight: 700
+        ));
+      }
+
+      &.is-external {
+        display: flex;
+        flex-flow: row nowrap;
+        align-items: center;
+
+        a::after {
+          display: inline-block;
+          width: 16px;
+          height: 16px;
+          font-size: 16px;
+          color: #fff;
+          content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='white' class='w-6 h-6'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M13.5 6H5.25A2.25 2.25 0 0 0 3 8.25v10.5A2.25 2.25 0 0 0 5.25 21h10.5A2.25 2.25 0 0 0 18 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25' /%3E%3C/svg%3E%0A");
+          margin-left: 0.5rem;
+          align-self: center;
+        }
+      }
     }
 
     @include himig.breakpoint-create('large') {
