--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,6 +5,7 @@
 @use '@matteusan/himig/ms-card';
 @use '@matteusan/himig/ms-card/card-extend' as card;
 @use '@matteusan/himig/ms-list';
+@use '@matteusan/himig/ms-select-field';
 @use '@matteusan/himig/ms-utils';
 
 @use 'components/ms-carousel';
@@ -188,6 +189,19 @@
     )
   );
 
+  .ms-card {
+    &:hover {
+      .ms-card__media img {
+        -webkit-filter: grayscale(0);
+      }
+    }
+
+    .ms-card__media img {
+      transition: all var(--ms-transition-time) ease;
+      -webkit-filter: grayscale(100%);
+    }
+  }
+
   %status-chip {
     position: absolute;
     top: 0;
@@ -225,6 +239,12 @@
     $struct: (padding: ('sm' 0))
   );
 
+  @include ms-select-field.render(
+    $struct:(
+      width: 'max-content'
+    )
+  );
+
   @include ms-carousel.render();
   @include ms-footer.render();
   @include ms-header.render();
@@ -244,7 +264,7 @@
   @include ms-utils.layout();
   @include ms-utils.color();
   @include ms-utils.struct();
-  @include ms-utils.typography($include: ('preset', 'family', 'weight'));
+  @include ms-utils.typography();
 
   .highlight {
     display: inline;
@@ -330,28 +350,40 @@
       justify-content: center;
       padding: 1rem 1.2rem;
       border-radius: 0.5rem;
-      border: 1px solid var(--tech-color, #fff);
-      color: var(--tech-color, #fff);
+      border: 1px solid var(--ink, rgba(255 255 255 / 25%));
+      color: var(--ink, rgba(255 255 255 / 50%));
       transition: all var(--ms-transition-time) ease;
       animation: load-in 0.2s ease;
       user-select: none;
 
       @include himig.breakpoint-create('large') {
-        &#github {
-          &:hover {
-            background-color: #fff;
-            color: #211f1f !important;
+        &:hover {
+          transform: translateY(-10px);
+        }
+      }
 
-            .technology__label {
-              color: inherit;
-            }
+      &:hover,
+      &:focus {
+        background-color: var(--tech-color, #fff);
+        color: #fff;
+        border-color: var(--tech-color, #fff);
+
+        &#github {
+          background-color: #fff;
+          color: #211f1f !important;
+          border-color: #fff;
+
+          .technology__label {
+            color: inherit;
           }
         }
 
-        &:hover {
-          background-color: var(--tech-color, #fff);
-          color: #fff;
-          transform: translateY(-10px);
+        &#javascript {
+          color: #211f1f !important;
+
+          .technology__label {
+            color: inherit;
+          }
         }
       }
 
@@ -379,6 +411,57 @@
     .ms-title-bar {
       margin: 0;
       padding: 0;
+    }
+
+    .services-list {
+      width: 100%;
+      display: flex;
+      flex-flow: var(--direction, row) nowrap;
+      gap: himig.primitive-token-get('gap.lg');
+      justify-content: space-between;
+      overflow-x: var(--overflow, scroll);
+      overflow-y: hidden;
+      padding: 0 0 himig.primitive-token-get('padding.md');
+
+      scrollbar-width: none !important;
+      &::-webkit-scrollbar-track {
+        background: rgba(0 0 0 / 0) !important;
+      }
+
+      @include himig.breakpoint-create('medium') {
+        --direction: column;
+        --overflow: hidden;
+      }
+
+      .services-list__item {
+        width: max-content;
+        position: relative;
+        color: var(--ink, rgba(255 255 255 / 50%));
+        transition: all var(--ms-transition-time) ease;
+        white-space: nowrap;
+        list-style: none;
+        cursor: pointer;
+
+        &:hover {
+          --ink: #fff;
+        }
+
+        &.is-active {
+          --ink: #fff;
+
+          &::before {
+            content: '';
+            width: 100%;
+            height: 2px;
+            position: absolute;
+            bottom: -0.3rem;
+            left: 0;
+            background-color: himig.token-get('accent-400');
+            animation: show-lines 0.3s ease;
+            transform-origin: left;
+          }
+        }
+      }
     }
   }
 
