--- a/scss/components/_ms-hero.scss
+++ b/scss/components/_ms-hero.scss
@@ -38,7 +38,7 @@ $hero-clip: polygon(0 0, 100% 0, 100% 93%, 0% 100%) !default;
 
     .hc-hero__wrap {
       width: calc(100% - 50px);
-      max-width: 1077px;
+      max-width: 67.3125rem;
 
       h1,
       h2,
